# cookiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml  setup.cfg
