[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name}}"
dynamic = ["version"]
description = "{{cookiecutter.project_description}}"
readme = "README.md"

dependencies = [
]
requires-python = ">=3.12"

[project.optional-dependencies]
lint = [
    "ruff",
]
stubs = [
]

[project.urls]
Homepage = "{{cookiecutter.project_url}}"
Repository = "{{cookiecutter.project_repo}}"

[tool.hatch.version]
path = "{{cookiecutter.python_namespace}}/{{cookiecutter.project_slug}}/__init__.py"

[tool.ruff.lint]
extend-select = [
    "I", "N", "D", "UP", "B", "A", "Q",
]
extend-ignore = [
    "D1",
]
