[metadata]
name = {{cookiecutter.project_name}}
version = attr: {{cookiecutter.python_namespace}}.{{cookiecutter.project_slug}}.__version__
description = {{cookiecutter.project_description}}
url = {{cookiecutter.project_url}}
license = Proprietary
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
python_requires = >=3.11
install_requires =
packages = {{cookiecutter.python_namespace}}

[options.package_data]
* =

[options.extras_require]
lint =
    flake8>=4.0.1
    flake8-broken-line
    flake8-bugbear
    flake8-builtins
    flake8-docstrings
    flake8-isort
    flake8-pep3101
    flake8-quotes
    flake8-rst-docstrings
    flake8-string-format
    pep8-naming
    flake8-black
    black
    isort
stubs =

[flake8]
; Black line length (88) + 10%
max-line-length = 96
inline-quotes = double
extend-ignore =
    D1 # Missing Docstrings
    E203 # Black compability
extend-exclude =
    venv
